Create the main page xml without logic UI

--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_main.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_dark_grey"
     tools:context=".MainActivity">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMainTitle"
+        style="@style/FoodFactText.Medium.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dimen_36dp"
+        android:text="@string/title_foodfact"
+        android:textSize="@dimen/text_size_32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvSubMainTitle"
+        style="@style/FoodFactText.White"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvMainTitle"
+        android:layout_centerHorizontal="true"
+        android:text="@string/label_sub_app_name"
+        android:textSize="@dimen/text_size_16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnAddImage"
+        android:layout_width="@dimen/dimen_90dp"
+        android:layout_height="@dimen/dimen_90dp"
+        android:background="@drawable/btn_bg_grey"
+        android:padding="@dimen/dimen_12dp"
+        android:src="@drawable/ic_camera"
+        app:layout_constraintBottom_toTopOf="@id/btnAboutUs"
+        app:layout_constraintEnd_toStartOf="@id/btnHowToUse"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSubMainTitle" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnHowToUse"
+        android:layout_width="@dimen/dimen_90dp"
+        android:layout_height="@dimen/dimen_90dp"
+        android:background="@drawable/btn_bg_grey"
+        android:padding="@dimen/dimen_12dp"
+        android:src="@drawable/ic_how_to"
+        app:layout_constraintBottom_toTopOf="@id/btnHistory"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnAddImage"
+        app:layout_constraintTop_toBottomOf="@id/tvSubMainTitle" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnAboutUs"
+        android:layout_width="@dimen/dimen_90dp"
+        android:layout_height="@dimen/dimen_90dp"
+        android:background="@drawable/btn_bg_grey"
+        android:padding="@dimen/dimen_12dp"
+        android:src="@drawable/ic_about"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnHistory"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btnAddImage" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnHistory"
+        android:layout_width="@dimen/dimen_90dp"
+        android:layout_height="@dimen/dimen_90dp"
+        android:background="@drawable/btn_bg_grey"
+        android:padding="@dimen/dimen_12dp"
+        android:src="@drawable/ic_history"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnAboutUs"
+        app:layout_constraintTop_toTopOf="@id/btnHowToUse" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
