--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_open_image.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_open_image.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_dark_grey"
-    tools:context=".presentation.main.MainActivity">
+    tools:context=".presentation.openimage.OpenImageActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMainTitle"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dimen_36dp"
-        android:text="@string/title_foodfact"
+        android:text="@string/label_choose_menu"
         android:textSize="@dimen/text_size_32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,58 +27,38 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvMainTitle"
         android:layout_centerHorizontal="true"
-        android:text="@string/label_sub_app_name"
+        android:text="@string/label_choose_item_for_send_image"
         android:textSize="@dimen/text_size_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btnAddImage"
+        android:id="@+id/btnCamera"
         android:layout_width="@dimen/dimen_90dp"
         android:layout_height="@dimen/dimen_90dp"
         android:background="@drawable/btn_bg_grey"
         android:padding="@dimen/dimen_12dp"
-        android:src="@drawable/ic_image"
-        app:layout_constraintBottom_toTopOf="@id/btnAboutUs"
-        app:layout_constraintEnd_toStartOf="@id/btnHowToUse"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSubMainTitle" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btnHowToUse"
-        android:layout_width="@dimen/dimen_90dp"
-        android:layout_height="@dimen/dimen_90dp"
-        android:background="@drawable/btn_bg_grey"
-        android:padding="@dimen/dimen_12dp"
-        android:src="@drawable/ic_how_to"
-        app:layout_constraintBottom_toTopOf="@id/btnHistory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnAddImage"
-        app:layout_constraintTop_toBottomOf="@id/tvSubMainTitle" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btnAboutUs"
-        android:layout_width="@dimen/dimen_90dp"
-        android:layout_height="@dimen/dimen_90dp"
-        android:background="@drawable/btn_bg_grey"
-        android:padding="@dimen/dimen_12dp"
-        android:src="@drawable/ic_about"
+        android:src="@drawable/ic_camera"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnHistory"
+        app:layout_constraintEnd_toStartOf="@id/btnGallery"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btnAddImage" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btnHistory"
+        android:id="@+id/btnGallery"
         android:layout_width="@dimen/dimen_90dp"
         android:layout_height="@dimen/dimen_90dp"
         android:background="@drawable/btn_bg_grey"
         android:padding="@dimen/dimen_12dp"
-        android:src="@drawable/ic_history"
+        android:src="@drawable/ic_folder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnAboutUs"
-        app:layout_constraintTop_toTopOf="@id/btnHowToUse" />
+        app:layout_constraintStart_toEndOf="@id/btnCamera"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/toolbarOpenImage"
+        layout="@layout/layout_toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
