--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/values/themes.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="FoodFactToolbar">
+        <item name="android:textSize">@dimen/text_size_18sp</item>
+        <item name="android:fontFamily">@font/saira_regular</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
