--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/values/dimens.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/values/dimens.xml
@@ -29,5 +29,6 @@
     <dimen name="text_size_28sp">28sp</dimen>
     <dimen name="text_size_30sp">30sp</dimen>
     <dimen name="text_size_32sp">32sp</dimen>
+    <dimen name="text_size_40sp">40sp</dimen>
     <dimen name="dimen_90dp">90dp</dimen>
 </resources>
