--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_dark_grey"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen">
+    tools:context=".SplashScreenActivity">
 
     <TextView
         android:layout_width="wrap_content"
