Splash_screen : add simple splash screen, font dimen text 40sp

--- a/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/title_foodfact"
         android:textColor="@color/color_yellow"
+        android:fontFamily="@font/saira_regular"
         android:textSize="@dimen/text_size_40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
